# streamlit-toy-dict-input

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
streamlit_toy_dict_input/: __init__.py
